# quran-analysis-core-rust

./: ARCHITECTURE.md  Cargo.toml  README.md
data/: english-stop-words.en
notes/features/: search-quality-performance.md
src/: lib.rs  main.rs
src/analysis/: frequency.rs  mod.rs  stats.rs
src/core/: arabic.rs  mod.rs  similarity.rs  transliteration.rs
src/data/: loader.rs  mod.rs  qac.rs  quran.rs
src/nlp/: mod.rs  pos_tagger.rs  stopwords.rs  wordnet.rs
src/ontology/: concepts.rs  graph.rs  mod.rs  parser.rs
src/qa/: answering.rs  mod.rs
src/search/: engine.rs  index.rs  mod.rs  query.rs  results.rs  scoring.rs
tests/: core_tests.rs  data_tests.rs  nlp_tests.rs  ontology_tests.rs  qa_tests.rs  search_tests.rs
