[package]
name = "quran-analysis"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "A standalone Quran semantic search and analysis tool — Rust port of QuranAnalysis"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
quick-xml = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
unicode-segmentation = "1"
unicode-normalization = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
